fixed css issue not showing all colors to choose

--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,17 @@
 .white {
   background-color: white;
 }
-.light-blue {
-  background-color: rgb(0, 188, 212)
+.lightblue {
+  background-color: rgb(0, 188, 212);
 }
 .blue {
-  background-color: rgb(3, 169, 244)
+  background-color: rgb(3, 169, 244);
 }
-.dark-blue {
-  background-color: rgb(33, 150, 243)
+.darkblue {
+  background-color: rgb(33, 150, 243);
 }
 
+/* Every pixel is 30x30px, and has a light border */
 .pixel {
   width: 30px;
   height: 30px;
@@ -30,5 +31,8 @@
   display: flex;
   flex-wrap: wrap;
   max-width: 900px;
-  background-color: white
+}
+
+.pixel.current-color {
+  border: 4px solid yellow;
 }
